--- a/package.json
+++ b/package.json
@@ -30,15 +30,17 @@
     ]
   },
   "dependencies": {
-    "@shelf/jest-mongodb": "^5.1.0",
     "330-final-project": "file:",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.14.1",
+    "mongoose": "^8.14.1"
+  },
+  "devDependencies": {
+    "@shelf/jest-mongodb": "^5.1.0",
+    "jest": "^29.7.0",
     "supertest": "^7.1.1"
   }
 }
