--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.14.1"
+    "mongoose": "^8.14.1",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^5.1.0",
